# genai-api

./: .dockerignore  .gitignore  Dockerfile  diffusion_model.py  energy_model.py  pyproject.toml  train_diffusion.py  train_energy.py  train_gan.py
app/: embedding_model.py  gan_model.py  generator.pth  main.py
weights/: energy_model.pth
