[project]
name = "genai-api"
version = "0.1.0"
description = "Applied GenAI Course API — embeddings + WGAN"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "spacy>=3.7.0",
    "torch>=2.3.0",
    "torchvision>=0.18.0",
    "pillow>=10.0.0",
    "numpy>=1.26.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
